--- a/SPP-Android/frontend/app/src/main/res/layout/fragment_detail.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/fragment_detail.xml
@@ -58,7 +58,7 @@
         android:orientation="vertical"
         android:paddingHorizontal="16dp"
         app:layout_constraintTop_toBottomOf="@+id/divider1"
-        app:layout_constraintBottom_toTopOf="@+id/header"
+        app:layout_constraintBottom_toTopOf="@+id/divider3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -110,6 +110,12 @@
 
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#ccc"
+            android:layout_marginVertical="4dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -117,7 +123,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="35dp"
                 android:gravity="center"
                 android:text="Nama Siswa : "
@@ -145,7 +151,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="35dp"
                 android:gravity="center"
                 android:text="Kelas : "
@@ -173,7 +179,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="35dp"
                 android:gravity="center"
                 android:textAlignment="textStart"
@@ -192,20 +198,144 @@
                 android:textColor="@android:color/black"
                 android:textSize="12sp"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="4dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:textAlignment="textStart"
+                android:text="Bulan Sudah Dibayar : "
+                android:textColor="@android:color/black"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:id="@+id/tvBulanDibayar"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:text="- Rp. 0 -"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/black"
+                android:textSize="12sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="4dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:textAlignment="textStart"
+                android:text="Total Dibayar : "
+                android:textColor="@android:color/black"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:id="@+id/tvTotalDibayar"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:text="- Rp. 0 -"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/black"
+                android:textSize="12sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="4dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:textAlignment="textStart"
+                android:text="Tunggakan : "
+                android:textColor="@android:color/black"
+                android:textSize="12sp"/>
+
+            <TextView
+                android:id="@+id/tvTunggakan"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:text="- Rp. 0 -"
+                android:textAlignment="textStart"
+                android:textColor="@android:color/black"
+                android:textSize="12sp"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#ccc"
+            android:layout_marginVertical="4dp"/>
+
+        <LinearLayout
+            android:id="@+id/tombol"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="4dp"
+            android:orientation="horizontal">
+
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btnCek"
-                android:layout_width="120dp"
+                android:id="@+id/btnCetakKartu"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:background="@drawable/btn_bg"
+                android:backgroundTint="#009688"
+                android:layout_marginRight="20dp"
+                android:textSize="12dp"
+                android:text="Cetak Kartu"
+                android:textColor="#ffffff"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnBayar"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="35dp"
                 android:gravity="center"
                 android:background="@drawable/btn_bg"
                 android:backgroundTint="#4CAF50"
                 android:textSize="12dp"
                 android:text="Bayar"
-                android:textColor="@android:color/white"/>
+                android:textColor="#ffffff"/>
 
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#ccc"
+        android:layout_marginVertical="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/infoSiswa"
+        app:layout_constraintBottom_toTopOf="@+id/header"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <LinearLayout
         android:id="@+id/header"
@@ -213,9 +343,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingHorizontal="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintTop_toBottomOf="@+id/infoSiswa"
+        app:layout_constraintBottom_toTopOf="@+id/divider4"
+        app:layout_constraintTop_toBottomOf="@+id/divider3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -255,6 +384,17 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#ccc"
+        android:layout_marginVertical="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
@@ -262,7 +402,7 @@
         android:divider="#00000000"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintTop_toBottomOf="@+id/divider4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
