--- a/SPP-Android/frontend/app/src/main/res/layout/tabel_list.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/tabel_list.xml
@@ -1,49 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvBulan"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="35dp"
-        android:gravity="center"
-        android:text="Bulan Dibayar"
-        android:textColor="@android:color/black"
-        android:textSize="12sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginVertical="8dp">
+
+        <TextView
+            android:id="@+id/tvBulan"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:text="Bulan Dibayar"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"/>
+
+        <TextView
+            android:id="@+id/tvTanggal"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:text="Tanggal Dibayar"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"/>
+
+        <TextView
+            android:id="@+id/tvPetugas"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:text="Nama Petugas"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnCetak"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:backgroundTint="#00BCD4"
+            android:text="Cetak"
+            android:textColor="@android:color/white"
+            android:background="@drawable/btn_bg"
+            android:textSize="12sp"/>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tvTanggal"
-        android:layout_width="120dp"
-        android:layout_height="35dp"
-        android:gravity="center"
-        android:text="Tanggal Dibayar"
-        android:textColor="@android:color/black"
-        android:textSize="12sp"/>
-
-    <TextView
-        android:id="@+id/tvPetugas"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="35dp"
-        android:gravity="center"
-        android:text="Nama Petugas"
-        android:textColor="@android:color/black"
-        android:textSize="12sp"/>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCetak"
-        android:layout_width="60dp"
-        android:layout_height="30dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:backgroundTint="#00BCD4"
-        android:text="Cetak"
-        android:textColor="@android:color/white"
-        android:background="@drawable/btn_bg"
-        android:textSize="12sp"/>
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#ccc"/>
 
 </LinearLayout>
