--- a/SPP-Android/frontend/app/src/main/res/layout/fragment_bayar.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/fragment_bayar.xml
@@ -25,7 +25,15 @@
             android:textColor="@color/black"/>
 
         <TextView
-            android:id="@+id/nis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="NIS Siswa"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"/>
+
+        <TextView
+            android:id="@+id/tvNis"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -33,13 +41,22 @@
             android:layout_marginVertical="14dp"
             android:background="@drawable/et_bg"
             android:padding="12dp"
+            android:enabled="false"
             android:inputType="text"
             android:hint="NIS Siswa"
             android:textColor="@color/black"
             android:textSize="15sp"/>
 
         <TextView
-            android:id="@+id/nama"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Nama Siswa"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"/>
+
+        <TextView
+            android:id="@+id/tvNama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -47,13 +64,22 @@
             android:layout_marginVertical="14dp"
             android:background="@drawable/et_bg"
             android:padding="12dp"
+            android:enabled="false"
             android:inputType="text"
             android:hint="Nama Siswa"
             android:textColor="@color/black"
             android:textSize="15sp"/>
 
         <TextView
-            android:id="@+id/kelas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Kelas Siswa"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"/>
+
+        <TextView
+            android:id="@+id/tvKelas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -61,10 +87,19 @@
             android:layout_marginVertical="14dp"
             android:background="@drawable/et_bg"
             android:padding="12dp"
+            android:enabled="false"
             android:inputType="text"
             android:hint="Kelas Siswa"
             android:textColor="@color/black"
             android:textSize="15sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Pilih Bulan"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"/>
 
         <TextView
             android:id="@+id/pilihBulan"
@@ -82,7 +117,15 @@
             android:textSize="15sp"/>
 
         <TextView
-            android:id="@+id/total_bayar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Total Bayar"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"/>
+
+        <TextView
+            android:id="@+id/tvTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -92,6 +135,7 @@
             android:padding="12dp"
             android:inputType="text"
             android:hint="Total Bayar"
+            android:enabled="false"
             android:textColor="@color/black"
             android:textSize="15sp"/>
 
