--- a/SPP-Android/frontend/app/src/main/res/layout/fragment_bayar.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/fragment_bayar.xml
@@ -7,172 +7,183 @@
     android:padding="20dp"
     tools:context=".BayarFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="22dp"
-            android:text="Pembayaran SPP"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:textColor="@color/black"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="NIS Siswa"
-            android:textColor="@android:color/black"
-            android:textSize="17sp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvNis"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="14dp"
-            android:layout_marginVertical="14dp"
-            android:background="@drawable/et_bg"
-            android:padding="12dp"
-            android:enabled="false"
-            android:inputType="text"
-            android:hint="NIS Siswa"
-            android:textColor="@color/black"
-            android:textSize="15sp"/>
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="6dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="22dp"
+                    android:text="Pembayaran SPP"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Nama Siswa"
-            android:textColor="@android:color/black"
-            android:textSize="17sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="NIS Siswa"
+                    android:textColor="@android:color/black"
+                    android:textSize="17sp"/>
 
-        <TextView
-            android:id="@+id/tvNama"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="14dp"
-            android:layout_marginVertical="14dp"
-            android:background="@drawable/et_bg"
-            android:padding="12dp"
-            android:enabled="false"
-            android:inputType="text"
-            android:hint="Nama Siswa"
-            android:textColor="@color/black"
-            android:textSize="15sp"/>
+                <TextView
+                    android:id="@+id/tvNis"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="14dp"
+                    android:layout_marginVertical="14dp"
+                    android:background="@drawable/et_bg"
+                    android:padding="12dp"
+                    android:enabled="false"
+                    android:inputType="text"
+                    android:hint="NIS Siswa"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Kelas Siswa"
-            android:textColor="@android:color/black"
-            android:textSize="17sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="Nama Siswa"
+                    android:textColor="@android:color/black"
+                    android:textSize="17sp"/>
 
-        <TextView
-            android:id="@+id/tvKelas"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="14dp"
-            android:layout_marginVertical="14dp"
-            android:background="@drawable/et_bg"
-            android:padding="12dp"
-            android:enabled="false"
-            android:inputType="text"
-            android:hint="Kelas Siswa"
-            android:textColor="@color/black"
-            android:textSize="15sp"/>
+                <TextView
+                    android:id="@+id/tvNama"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="14dp"
+                    android:layout_marginVertical="14dp"
+                    android:background="@drawable/et_bg"
+                    android:padding="12dp"
+                    android:enabled="false"
+                    android:inputType="text"
+                    android:hint="Nama Siswa"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Pilih Bulan"
-            android:textColor="@android:color/black"
-            android:textSize="17sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="Kelas Siswa"
+                    android:textColor="@android:color/black"
+                    android:textSize="17sp"/>
 
-        <TextView
-            android:id="@+id/pilihBulan"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="14dp"
-            android:layout_marginVertical="14dp"
-            android:background="@drawable/et_bg"
-            android:padding="12dp"
-            android:drawableRight="@drawable/calendar"
-            android:inputType="text"
-            android:hint="Pilih Bulan"
-            android:textColor="@color/black"
-            android:textSize="15sp"/>
+                <TextView
+                    android:id="@+id/tvKelas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="14dp"
+                    android:layout_marginVertical="14dp"
+                    android:background="@drawable/et_bg"
+                    android:padding="12dp"
+                    android:enabled="false"
+                    android:inputType="text"
+                    android:hint="Kelas Siswa"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="Total Bayar"
-            android:textColor="@android:color/black"
-            android:textSize="17sp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="Pilih Bulan"
+                    android:textColor="@android:color/black"
+                    android:textSize="17sp"/>
 
-        <TextView
-            android:id="@+id/tvTotal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="14dp"
-            android:layout_marginVertical="14dp"
-            android:background="@drawable/et_bg"
-            android:padding="12dp"
-            android:inputType="text"
-            android:hint="Total Bayar"
-            android:enabled="false"
-            android:textColor="@color/black"
-            android:textSize="15sp"/>
+                <TextView
+                    android:id="@+id/pilihBulan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="14dp"
+                    android:layout_marginVertical="14dp"
+                    android:background="@drawable/et_bg"
+                    android:padding="12dp"
+                    android:drawableRight="@drawable/calendar"
+                    android:inputType="text"
+                    android:hint="Pilih Bulan"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"/>
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:text="Total Bayar"
+                    android:textColor="@android:color/black"
+                    android:textSize="17sp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true">
+                <TextView
+                    android:id="@+id/tvTotal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="14dp"
+                    android:layout_marginVertical="14dp"
+                    android:background="@drawable/et_bg"
+                    android:padding="12dp"
+                    android:inputType="text"
+                    android:hint="Total Bayar"
+                    android:enabled="false"
+                    android:textColor="@color/black"
+                    android:textSize="15sp"/>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnKembali"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="14dp"
-            android:background="@drawable/btn_bg"
-            android:backgroundTint="@android:color/black"
-            android:text="Kembali"
-            android:textColor="@android:color/white"
-            app:cornerRadius="12dp" />
+            </LinearLayout>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnBayar"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="14dp"
-            android:background="@drawable/btn_bg"
-            android:backgroundTint="#4CAF50"
-            android:text="Bayar"
-            android:textColor="@android:color/white"
-            app:cornerRadius="12dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="17dp">
 
-    </LinearLayout>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnKembali"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="14dp"
+                    android:background="@drawable/btn_bg"
+                    android:backgroundTint="@android:color/black"
+                    android:text="Kembali"
+                    android:textColor="@android:color/white"
+                    app:cornerRadius="12dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnBayar"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="50dp"
+                    android:layout_marginHorizontal="14dp"
+                    android:background="@drawable/btn_bg"
+                    android:backgroundTint="#4CAF50"
+                    android:text="Bayar"
+                    android:textColor="@android:color/white"
+                    app:cornerRadius="12dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
