--- a/SPP-Android/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/SPP-Android/frontend/app/src/main/res/layout/fragment_home.xml
@@ -45,6 +45,7 @@
 
         <ScrollView
             android:id="@+id/container"
+            android:background="#fff"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
